5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3997/executions/1708_3033.log
== TEST (2019-04-29 15:09:39) 
-- CODE:
x = float(input(" "))

if (-100 <= x < 0):
	print(-1/x)


-- ERROR:
File "XXXX", line 5
    f(x)=sin(x) 0 =< x < 90)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:10:04) 
-- CODE:
x = float(input("Digite x: "))

if (-100 <= x < 0):
	print(-1/x)


-- ERROR:
File "XXXX", line 5
    f(x)=sin(x) 0 =< x < 90)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:10:55) 
-- CODE:
x = float(input("Digite x: "))

if (-100 <= x < 0):
	print(-1//x)
elif (0 < x <= 100):
	print(1//x)
	

-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:11:29) 
-- CODE:
x = float(input("Digite x: "))

if (-100 <= x < 0):
	print(-1//x)
elif (0 < x <= 100):
	print(1//x)
else:
	print("entrada invalida")

-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:11:34) 
-- CODE:
x = float(input("Digite x: "))

if (-100 <= x < 0):
	print(-1//x)
elif (0 < x <= 100):
	print(1//x)
else:
	print("entrada invalida")

-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:12:28) 
-- CODE:
x = float(input("Digite x: "))

if (-100 <= x < 0):
	print(round(-1//x,2)
elif (0 < x <= 100):
	print(round(1//x,2))
else:
	print("entrada invalida")

-- ERROR:
File "XXXX", line 5
    elif (0 < x <= 100):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:13:25) 
-- CODE:
x = float(input("Digite x: "))

if (-100 <= x < 0):
	print(round(-1//x,2))
elif (0 < x <= 100):
	print(round(1//x,2))
else:
	print("entrada invalida")

-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:13:30) 
-- CODE:
x = float(input("Digite x: "))

if (-100 <= x < 0):
	print(round(-1//x,2))
elif (0 < x <= 100):
	print(round(1//x,2))
else:
	print("entrada invalida")

-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:13:37) 
-- CODE:
x = float(input("Digite x: "))

if (-100 <= x < 0):
	print(round(-1//x,2))
elif (0 < x <= 100):
	print(round(1//x,2))
else:
	print("entrada invalida")

-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:14:01) 
-- CODE:
x = float(input("Digite x: "))

if (-100 <= x < 0):
	print(round(-1//x,2))
elif (0 < x <= 100):
	print(round(1//x,2))
else:
	print("entrada invalida")

-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:14:07) 
-- CODE:
x = float(input("Digite x: "))

if (-100 <= x < 0):
	print(round(-1//x,2))
elif (0 < x <= 100):
	print(round(1//x,2))
else:
	print("entrada invalida")

-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:14:21) 
-- CODE:
x = float(input("Digite x: "))

if (-100 <= x < 0):
	print(round(-1//x,2))
elif (0 < x <= 100):
	print(round(1//x,2))
else:
	print("entrada invalida")

-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:14:32) 
-- CODE:
x = float(input("Digite x: "))

if (-100 <= x < 0):
	print(round(-1//x,2))
elif (0 < x <= 100):
	print(round(1//x,2))
else:
	print("entrada invalida")

-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:15:09) 
-- CODE:
x = float(input("Digite x: "))

if (-100 <= x < 0):
	print(round((-1//x),2))
elif (0 < x <= 100):
	print(round((1//x),2))
else:
	print("entrada invalida")

-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:15:30) 
-- CODE:
x = float(input("Digite x: "))

if (-100 <= x < 0):
	print(round((-1//x),4))
elif (0 < x <= 100):
	print(round((1//x),4))
else:
	print("entrada invalida")

-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:16:36) 
-- CODE:
x = float(input("Digite x: "))

if (-100 <= x) or (x < 0):
	print(round((-1//x),4))
elif (0 < x) or (x <= 100):
	print(round((1//x),4))
else:
	print("entrada invalida")

-- OUTPUT:
-1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:16:47) 
-- CODE:
x = float(input("Digite x: "))

if (-100 <= x) or (x < 0):
	print(round((-1//x),4))
elif (0 < x) or (x <= 100):
	print(round((1//x),4))
else:
	print("entrada invalida")

-- EXECUTION TIME:
0.152738
-- TEST CASE 1:
---- input:
92.0
---- correct output:
0.0109
---- user output:
-1.0
-- TEST CASE 2:
---- input:
-55.25
---- correct output:
0.0181
---- user output:
0.0
-- TEST CASE 3:
---- input:
0.025
---- correct output:
40.0
---- user output:
-40.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:17:35) 
-- CODE:
x = float(input("Digite x: "))

if (-100 <= x) and (x < 0):
	print(round((-1//x),4))
elif (0 < x) and (x <= 100):
	print(round((1//x),4))
else:
	print("entrada invalida")

-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:17:51) 
-- CODE:
x = float(input("Digite x: "))

if (-100 <= x) and (x < 0):
	print(round((-1/x),4))
elif (0 < x) and (x <= 100):
	print(round((1/x),4))
else:
	print("entrada invalida")

-- OUTPUT:
0.0109
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:17:59) 
-- CODE:
x = float(input("Digite x: "))

if (-100 <= x) and (x < 0):
	print(round((-1/x),4))
elif (0 < x) and (x <= 100):
	print(round((1/x),4))
else:
	print("entrada invalida")

-- EXECUTION TIME:
0.147746
-- TEST CASE 1:
---- input:
92.0
---- correct output:
0.0109
---- user output:
0.0109
-- TEST CASE 2:
---- input:
-55.25
---- correct output:
0.0181
---- user output:
0.0181
-- TEST CASE 3:
---- input:
0.025
---- correct output:
40.0
---- user output:
40.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
